[FIND_MATCH_PAGE]: Add streak page layout and svg loader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,9 @@
         },
         "types": [
             "@types/node",
-            "@nuxt/types"
-        ]
+            "@nuxt/types",
+            "./types"
+        ],
     },
     "exclude": [
         "node_modules",
