--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
+    "nuxt-svg-loader": "^1.2.0",
     "sass-loader": "^10.1.1"
   },
   "devDependencies": {
