--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "nuxt": "^2.14.6",
         "nuxt-svg-loader": "^1.2.0",
         "nuxt-vuex-localstorage": "^1.2.7",
-        "sass-loader": "^10.1.1"
+        "sass-loader": "^10.1.1",
+        "vue-lottie": "^0.2.1"
     },
     "devDependencies": {
         "@nuxt/types": "^2.14.6",
